@@ -1,3 +1,8 @@
+2004-03-23  Synge Todo  <wistaria@comp-phys.org>
+
+        * Changed looper/graph.h so that the generate_graph function uses
+          ALPS/Lattice Library.
+
 2004-03-06  Synge Todo  <wistaria@comp-phys.org>
 
         * New configure script and Makefiles using GNU automake tool.
